# Aqueduct

./: Aqueduct.aux  Aqueduct.cabal  Aqueduct.hp  Aqueduct.prof  Aqueduct.ps  LICENSE  README.md  stack
app/: Main.hs
src/: Aqueduct.hs
